# taichu3_soft

./: .gitignore  CMakeLists.txt
cmake/: cpprawstring.cmake
common/: CMakeLists.txt  mysystem.cmake  mysystem.hh
common/base64/: base64.cc
common/demangle/: cxa_demangle.cc
common/factory/: JadeFactory.hh
common/getopt/: CMakeLists.txt  getopt.c
common/gte/: CMakeLists.txt
common/linenoiseng/: CMakeLists.txt  ConvertUTF.cpp  linenoise.cpp
common/msgpack/: CMakeLists.txt
common/rapidjson/: myrapidjson.h
common/utfcpp/: CMakeLists.txt
eudaq/: CMakeLists.txt
eudaq/misc/: taichu_eudaq.conf  taichu_eudaq.ini  taichu_eudaqRun.sh
eudaq/src/: TaichuProducer.cc
frontend/: CMakeLists.txt
frontend/exe/: CMakeLists.txt  ConfigDAQtool.cc  datatool.cc  rbcptool.cc  tcpcontool.cc
frontend/include/: DataPack.hh  Frontend.hh  StreamInBuffer.hh  TcpBuffer.hh  TcpConnection.hh  Utility.hh  daqb.hh
frontend/rbcp/: CMakeLists.txt  rbcp.hh
frontend/resource/: CMakeLists.txt  firmware_reg.json  frontend_default.json  taichupix3_reg.json
frontend/src/: DataPack.cc  Frontend.cc  StreamInBuffer.cc  TcpBuffer.cc  TcpConnection.cc  Utility.cc  daqb.cc  rbcp.cc
frontend/tcp/: TcpConnection.cc  TcpConnection.hh
frontend/tcpcon/: CMakeLists.txt  TcpBuffer.cc  TcpConnection.cc  TcpConnection.hh  daqb.cc  daqb.hh
python/: rbcp_test.py  test_TC3_ip27.py
python/sitcpy/: rbcp.py
teldaq/: CMakeLists.txt
teldaq/include/: TelEvent.hpp  Telescope.hh
teldaq/resource/: CMakeLists.txt  taichu_layer_conf.json  taichu_tel_conf.json
teldaq/src/: Telescope.cc
